noinst_SCRIPTS	= test			\
		  test_disk_bsd		\
		  test_disk_dos		\
		  test_disk_dvh		\
		  test_disk_gpt		\
		  test_disk_pc98	\
		  test_disk_mac		\
		  test_disk_sun		\
		  test_fs_ext2		\
		  test_fs_fat		\
		  test_fs_hfs		\
		  test_fs_hfsplus	\
		  test_fs_linux_swap	\
		  test_fs_reiserfs	\
		  build_leak_list

EXTRA_DIST	= HOWTO testrc $(noinst_SCRIPTS)

CLEANFILES	= test_log test_out
